   * Reorganized AI macro library
   * Added 'move leader to target' candidate action
 * Graphics:
   * New portraits for Merman Spearman, Bat
   * Added a couple of missing frames for the Inferno Drake
 * Language and i18n:
   * Updated translations: Czech, Estonian, French, Spanish.
 * Music and sound effects:
   * Added new music track, "Into the Shadows" by Tyler Johnson
 * User interface:
   * new gamestate inspector debug dialog (via 'inspect' command 
     and '[inspect]' tag)
 * WML engine:
   * Fix silent=yes for objectives
   * Allow [story] [part] blocks to specify the title box alignment
     with title_alignment=
 * Miscellaneous and bugfixes:
   * Fix broken "Skip Ai moves" option.
   * Changed upload log format and defaulted the new uploader.
   * Fix bug #13268 (corrupted replays due to undo of recall/dismiss)
   * Weapon name change for Drake Enforcer.

Version 1.7.5:
 * Campaigns:
   * Legend of Wesmere
     * Scenario 21 redesigned
 * Graphics:
   * New base frame and animations for the Drake Blademaster.
 * Language and i18n:
   * Setup for tracking localized images.
   * Updated translations: Chinese (Traditional), Lithuanian, Serbian.
 * Units:
   * Fixed problems with the Drakes introduced in 1.7.4 (wrong resistances and
     a possible crash when advancing to the Inferno Drake)
 * Miscellaneous and bugfixes:
   * Optimized the cmake building if both game and tests are enabled
   * Switched to new stats upload mechanism so that stats.wesnoth.org should
     soon provide usefull data
   * Optimize pathfinding on 1MP terrains.

Version 1.7.4:
 * AI:
   * Formula AI debugger (uses -new-widgets)
   * New 'debug()' formula function
   * Fixed crashes and infinite loops on AI turn
 * Animations
   * Movement have the number of steps done in value and the number of step left
     in value_second, this allows take-off and landing animations
 * Campaigns
   * Legend of Wesmere
     * Scenario 3 redesigned