@@ -10,6 +10,7 @@ Version 1.7.5+svn:
    * Updated translations: Czech, Estonian, French, Spanish.
  * Music and sound effects:
    * Added new music track, "Into the Shadows" by Tyler Johnson
+   * Fixed bug #14239 (check_fogged ignored by sound sources)
  * User interface:
    * new gamestate inspector debug dialog (via 'inspect' command 
      and '[inspect]' tag)
